Bug #998 [HelperArchive] Refactor generateArchiveDetailsList
Introduce new prototype, allowing to override the timestamp field.